# vikhry

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PLANS.md  README.md  hatch_build.py  pyproject.toml  redis-memory-only.conf
.github/workflows/: docker-image.yml  docs-pages.yml  release-artifacts.yml
.plans/: PLANS.md
.plans/steps/: step_1.md  step_10.md  step_11.md  step_18.md  step_19.md  step_2.md  step_20.md  step_28.md  step_29.md  step_3.md  step_30.md  step_31.md  step_32.md  step_33.md  step_34.md  step_35.md  step_36.md  step_37.md  step_38.md  step_39.md  step_4.md  step_40.md  step_41.md  step_42.md  step_43.md  step_44.md  step_45.md  step_5.md  step_6.md  step_7.md  step_8.md  step_9.md
.steps/: PLANS.md
.steps/steps/: step_18.md  step_2.md  step_20.md  step_32.md  step_34.md  step_35.md  step_36.md  step_37.md  step_5.md  step_6.md  step_7.md  step_8.md
docs/: 0_cli.md  0_test_structure.md  1_architecture.md  2_orchestrator.md  3_worker.md  4_test_structure.md  5_ui.md  astro.config.mjs  index.md  package-lock.json  quickstart.md  release.md
docs/contracts/: v1.md
docs/steps/: step_1.md  step_10.md  step_11.md  step_19.md  step_28.md  step_29.md  step_3.md  step_30.md  step_31.md  step_33.md  step_4.md  step_6.md  step_9.md
examples/: README.md  __init__.py
examples/scenarios/: __init__.py  localhost_demo.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: build_frontend.sh
tests/integration/: conftest.py  (+4 more)
vikhry/: __init__.py  cli.py  ui_assets.py
(+81 files in other folders)
