[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "vikhry"
version = "0.2.7"
description = "Async distributed load-testing framework contracts and runtime"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "orjson>=3.11.0",
    "pydantic>=2.11.0",
    "pyreqwest>=0.10.1",
    "redis>=7.2.0",
    "robyn>=0.78.0",
    "ruff>=0.15.2",
    "typer>=0.12.0",
]

[project.scripts]
vikhry = "vikhry.cli:main"

[project.urls]
repository = "https://github.com/gigimon/vikhry"

[tool.uv]
package = true

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_classes = ["Spec"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require dockerized redis",
    "resilience: crash/recovery and degraded-path scenarios",
]
